--- a/config_custom.yaml
+++ b/config_custom.yaml
@@ -1,9 +1,9 @@
 log:
-  level: debug
+  level: warn
   file: "/var/log/mosdns.log"
 
 api:
-  http: "0.0.0.0:8338" # api 监听地址
+  http: "127.0.0.1:9091" # api 监听地址
 
 include:
   - "/etc/mosdns/dat_exec.yaml"
@@ -14,37 +14,40 @@ plugins:
     type: sequence
     args:
       - exec: query_summary reject_null_domain
-      - exec: $reject_3
+      - exec: reject 3
 
   - tag: reject_qtype65
     type: sequence
     args:
       - exec: query_summary reject_qtype65
-      - exec: $reject_3
-
-  - tag: reject_ad
+      - exec: reject 3
+  
+  - tag: reject_block
     type: sequence
     args:
-      - exec: query_summary reject_adlist
-      - exec: $reject_3
+      - exec: query_summary reject_block
+      - exec: reject 5
+
+  # - tag: reject_ad
+  #   type: sequence
+  #   args:
+  #     - exec: query_summary reject_adlist
+  #     - exec: reject 3
 
   ################ 序列 #################
   - tag: dns_nocn
-    type: "fallback"
+    type: fallback
     args:
-      primary: quad9 # 主dns
-      secondary: nextdns # 备用dns
-      threshold: 700 # 无响应切换 毫秒
-      always_standby: true # 副可执行插件始终待命
+      primary: forward_remote
+      secondary: forward_local
+      threshold: 5000
+      always_standby: false
   
   # dns-cn 序列
   - tag: dns_cn
-    type: "fallback"
+    type: sequence
     args:
-      primary: ali # 主dns
-      secondary: dnspod # 备用dns
-      threshold: 500
-      always_standby: true # 副可执行插件始终待命
+      - exec: $forward_local
 
   - tag: dns_nocn_seq
     type: sequence
@@ -58,19 +61,13 @@ plugins:
       - exec: query_summary dns_cn
       - exec: $dns_cn
 
-  - tag: local_seq
-    type: sequence
-    args:
-      - exec: query_summary local
-      - exec: $local
-
-  - tag: fallback_seq # 其他特殊情况统一使用 dns_cn 处理
+  - tag: fallback_seq # 其他特殊情况统一交给clash处理
     type: sequence
     args:
       - exec: query_summary fallback
-      - exec: $dns_cn
+      - exec: $forward_openclash
 
-  - tag: other_seq # 其他特殊情况统一使用 dns_cn 处理
+  - tag: other_seq # 预处理序列的特殊情况统一使用 dns_cn 处理
     type: sequence
     args:
       - exec: query_summary other
@@ -82,6 +79,10 @@ plugins:
     args:
       - exec: $ecs_cn
       - exec: $dns_cn_seq
+      - matches: qname $ddnslist
+        exec: return
+      - matches: qname $whitelist
+        exec: return
       - matches: "!resp_ip $geoip_cn" # 响应非 cn ip
         exec: drop_resp # 丢弃
 
@@ -90,51 +91,46 @@ plugins:
     type: sequence
     args:
       - exec: $no_ecs
-      - exec: prefer_ipv4
       - exec: $dns_nocn_seq
-      - matches: "resp_ip $geoip_cn" # 响应为 cn ip
+      - matches: "resp_ip $geoip_cn" # 响应存在 cn ip
         exec: drop_resp # 丢弃
 
   - tag: query_gfw
     type: sequence
     args:
-      - exec: $forward_remote
+      - exec: $no_ecs
+      - exec: $forward_openclash
 
   # query fallback
   - tag: query_fallback
     type: sequence
     args:
-      # - exec: $ecs-cn
-      - exec: prefer_ipv4
+      - exec: $no_ecs
       - exec: $fallback_seq
 
-  # query lan
-  - tag: query_lan
-    type: sequence
-    args:
-      - exec: $cache_lan
-      - matches: has_resp # 命中了 lan cache
-        exec: return
-      # - exec: $no_ecs
-      - exec: $local_seq
-
-  # 其他所有情况
-  - tag: query_other 
-    type: sequence
-    args:
-      # - exec: $no_ecs 
-      - exec: $other_seq
+  # # query lan
+  # - tag: query_lan
+  #   type: sequence
+  #   args:
+  #     - exec: $cache_lan
+  #     - matches: has_resp # 命中了 lan cache
+  #       exec: return
+  #     # - exec: $no_ecs
+  #     - exec: $local_seq
 
   - tag: pre_handle
     type: sequence
     args:
-      - exec: $ttl_1h # ttl 1h
+      - exec: $ttl_modify # 修改 ttl（单位：秒）
       - exec: accept # 接受响应,终止流程
 
   - tag: main_handle
     type: sequence
     args:
-      - exec: $ttl_5m # ttl 5min
+      - matches: qname $ddnslist
+        exec: ttl 5-5
+      - matches: "!qname $ddnslist"
+        exec: $ttl_modify
       - exec: accept # 接受响应,终止流程
 
   # pre_sequence 结果处理 
@@ -155,25 +151,39 @@ plugins:
   - tag: pre_sequence
     type: sequence
     args:
-      - matches: qtype 65 # TYPE 65 类型|DNS服务器状态
+      - matches: qtype 65 # TYPE 65 类型|DNS服务器状态，拒绝该类型可避免某些IOS 应用无法上网。
         exec: $reject_qtype65
       - matches: "qname keyword::" # 无效域名
         exec: $reject_null_domain
-      - matches: qtype 12 # TYPE 12 类型|反查域名 PTR 记录
-        exec: $query_other
+      - matches:  # PTR 黑名单
+        - "qtype 12"
+        - "qname $local_ptr"
+        exec: reject 3
+
+      - exec: $hosts  # hosts
+      - exec: jump has_resp_main
+      - exec: $redirect # redirect
+      - exec: jump has_resp_main
+      - matches: qname $blocklist
+        exec: $reject_block
       - matches: qtype 255 # TYPE 255 类型|DNS服务器拓展支持
-        exec: $query_other
-      - matches: ptr_ip $geoip_private # private ip
-        exec: $query_lan
+        exec: $other_seq
       - exec: jump has_resp_pre
+      # - matches: ptr_ip $geoip_private # private ip
+      #   exec: $query_lan
+      
 
   # main_sequence
   - tag: main_sequence
     type: sequence
     args:
-      - matches: qname $geosite_ads-all # ad 域名
-        exec: $reject_ad
-      - exec: $cache_wan # cache wan
+      # - matches: qname $geosite_ads-all # ad 域名（去广告由AdGuardHome完成）
+      #   exec: $reject_ad
+      # - exec: $cache_wan # 缓存功能由AdGuardHome完成
+      # - exec: jump has_resp_main
+
+      - matches: qname $ddnslist  # ddns
+        exec: $query_cn
       - exec: jump has_resp_main
       - matches: qname $geosite_cn # cn 域名
         exec: $query_cn
@@ -185,24 +195,22 @@ plugins:
       - matches: qname $geosite_location-!cn # 非 cn 域名
         exec: $query_nocn
       - exec: jump has_resp_main
-      # 其他
-      - exec: $no_ecs
+      # 漏网之鱼
       - exec: $query_fallback
       - exec: jump has_resp_main
 
   - tag: sequence
     type: sequence
     args:
-      - exec: metrics_collector metrics
       - exec: $pre_sequence # 预处理
       - exec: $main_sequence # 主执行序列
 
-  # 在同一端口启动 udp 和 tcp 服务器。
+  # 在 5353 端口启动 udp 和 tcp 服务器。
   - type: udp_server
     args:
       entry: sequence
-      listen: :5333
+      listen: :5335
   - type: tcp_server
     args:
       entry: sequence
-      listen: :5333
+      listen: :5335
